Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13080

[ERROR] InnoDB: Missing MLOG_CHECKPOINT between the checkpoint x and the end y

    XMLWordPrintable

Details

    Description

      Hello,

      I've been using MariaDB 10.2.6 with slave_run_triggers_for_rbr for some aggregation tables.
      However, there's a big memory leak with this setup and the server regularly hangs.

      Last time it hangs, innodb crash recovery could not start because MLOG_CHECKPOINT was not found.

      My server has got a BBWC so any fsync should be persisted on disk. I dont understand how that could happen ?

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              Fuyar Farid UYAR
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 8d 5.25h
                  8d 5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.